ingress/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: default
  labels:
    app: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver  
    spec:
      containers:
      - name: webserver-container
        image: webserver:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "200m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi" 
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
  labels:
    app: webserver
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
