ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  labels:
    app: webserver
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: test.local
    http:
      paths:
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: webserver-svc
            port:
              number: 80
      - path: "/front"
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 8081
